Added link admin and deleted technology
