# src/models/dto/admin/update-link.dto.ts
@@ -1,0 +1,23 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsOptional, IsString } from 'class-validator';
+
+export class UpdateLinkDto {
+  @IsString()
+  @IsOptional()
+  @ApiProperty()
+  tag?: string;
+
+  @IsString()
+  @IsOptional()
+  @ApiProperty()
+  name?: string;
+
+  @IsString()
+  @ApiProperty()
+  link: string;
+
+  @IsString()
+  @IsOptional()
+  @ApiProperty()
+  target?: string;
+}
